[gd_scene load_steps=9 format=3 uid="uid://de8b6h6ieal7r"]

[ext_resource type="Script" path="res://addons/better-terrain/editor/Dock.gd" id="1_raoha"]
[ext_resource type="Texture2D" uid="uid://c0p2y7oyy1hxk" path="res://addons/better-terrain/icons/EditType.svg" id="2_cpm2t"]
[ext_resource type="Texture2D" uid="uid://xvh28rmqyux" path="res://addons/better-terrain/icons/Replace.svg" id="2_fvmt6"]
[ext_resource type="Texture2D" uid="uid://d2tolup0vv1e4" path="res://addons/better-terrain/icons/EditTerrain.svg" id="3_pqb1p"]
[ext_resource type="Texture2D" uid="uid://c0ii3ju7iesf4" path="res://addons/better-terrain/icons/Warning.svg" id="4_6ahwe"]
[ext_resource type="Script" path="res://addons/better-terrain/editor/TileView.gd" id="4_nqppq"]

[sub_resource type="Image" id="Image_2g1h3"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 94, 94, 127, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 94, 94, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 93, 93, 41, 255, 255, 255, 0, 255, 255, 255, 0, 255, 97, 97, 42, 255, 93, 93, 233, 255, 93, 93, 232, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 44, 255, 255, 255, 0, 255, 97, 97, 42, 255, 97, 97, 42, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 96, 96, 45, 255, 93, 93, 235, 255, 94, 94, 234, 255, 95, 95, 43, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 93, 93, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 95, 95, 59, 255, 96, 96, 61, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_ksqtf"]
image = SubResource("Image_2g1h3")

[node name="Dock" type="Control" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
shortcut_context = NodePath(".")
script = ExtResource("1_raoha")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Toolbar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Draw" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
tooltip_text = "Draw terrain"
toggle_mode = true
button_pressed = true
icon = SubResource("ImageTexture_ksqtf")
flat = true

[node name="Line" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
tooltip_text = "Draw line"
toggle_mode = true
icon = SubResource("ImageTexture_ksqtf")
flat = true

[node name="Rectangle" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
tooltip_text = "Fill a rectangle of terrain"
toggle_mode = true
icon = SubResource("ImageTexture_ksqtf")
flat = true

[node name="Fill" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
tooltip_text = "Bucket fill terrain"
toggle_mode = true
icon = SubResource("ImageTexture_ksqtf")
flat = true

[node name="Replace" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
tooltip_text = "Toggle replace mode"
toggle_mode = true
icon = ExtResource("2_fvmt6")

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Toolbar"]
layout_mode = 2

[node name="SelectTiles" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
tooltip_text = "Select"
toggle_mode = true
icon = SubResource("ImageTexture_ksqtf")
flat = true

[node name="PaintType" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
tooltip_text = "Paint terrain types"
toggle_mode = true
icon = ExtResource("2_cpm2t")
flat = true

[node name="PaintTerrain" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
tooltip_text = "Paint terrain connecting types"
toggle_mode = true
icon = ExtResource("3_pqb1p")
flat = true

[node name="Zoom" type="HSlider" parent="VBoxContainer/Toolbar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 1.0
max_value = 8.0
step = 0.1
value = 1.0

[node name="Spacer" type="Control" parent="VBoxContainer/Toolbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Clean" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Clean tile data"
icon = ExtResource("4_6ahwe")

[node name="LayerOptions" type="OptionButton" parent="VBoxContainer/Toolbar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 20

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="VBoxContainer/HSplitContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
hide_root = true

[node name="LowerToolbar" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/HSplitContainer/VBoxContainer/LowerToolbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AddTerrain" type="Button" parent="VBoxContainer/HSplitContainer/VBoxContainer/LowerToolbar"]
layout_mode = 2
tooltip_text = "Add terrain type"
icon = SubResource("ImageTexture_ksqtf")
flat = true

[node name="EditTerrain" type="Button" parent="VBoxContainer/HSplitContainer/VBoxContainer/LowerToolbar"]
layout_mode = 2
tooltip_text = "Edit terrain type"
icon = SubResource("ImageTexture_ksqtf")
flat = true

[node name="MoveUp" type="Button" parent="VBoxContainer/HSplitContainer/VBoxContainer/LowerToolbar"]
layout_mode = 2
tooltip_text = "Move selected terrain up"
icon = SubResource("ImageTexture_ksqtf")
flat = true

[node name="MoveDown" type="Button" parent="VBoxContainer/HSplitContainer/VBoxContainer/LowerToolbar"]
layout_mode = 2
tooltip_text = "Move selected terrain down"
icon = SubResource("ImageTexture_ksqtf")
flat = true

[node name="RemoveTerrain" type="Button" parent="VBoxContainer/HSplitContainer/VBoxContainer/LowerToolbar"]
layout_mode = 2
tooltip_text = "Remove selected terrain type(s)"
icon = SubResource("ImageTexture_ksqtf")
flat = true

[node name="Panel" type="Panel" parent="VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="ScrollArea" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="TileView" type="Control" parent="VBoxContainer/HSplitContainer/Panel/ScrollArea"]
texture_filter = 1
texture_repeat = 1
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
script = ExtResource("4_nqppq")

[connection signal="pressed" from="VBoxContainer/Toolbar/Draw" to="." method="_on_draw_pressed"]
[connection signal="pressed" from="VBoxContainer/Toolbar/Line" to="." method="_on_line_pressed"]
[connection signal="pressed" from="VBoxContainer/Toolbar/Rectangle" to="." method="_on_rectangle_pressed"]
[connection signal="pressed" from="VBoxContainer/Toolbar/Fill" to="." method="_on_fill_pressed"]
[connection signal="pressed" from="VBoxContainer/Toolbar/SelectTiles" to="." method="_on_select_tiles_pressed"]
[connection signal="pressed" from="VBoxContainer/Toolbar/PaintType" to="." method="_on_paint_type_pressed"]
[connection signal="pressed" from="VBoxContainer/Toolbar/PaintTerrain" to="." method="_on_paint_terrain_pressed"]
[connection signal="value_changed" from="VBoxContainer/Toolbar/Zoom" to="VBoxContainer/HSplitContainer/Panel/ScrollArea/TileView" method="_on_zoom_value_changed"]
[connection signal="pressed" from="VBoxContainer/Toolbar/Clean" to="." method="_on_clean_pressed"]
[connection signal="item_selected" from="VBoxContainer/Toolbar/LayerOptions" to="." method="_on_layer_options_item_selected"]
[connection signal="cell_selected" from="VBoxContainer/HSplitContainer/VBoxContainer/Panel/Tree" to="." method="update_tile_view_paint"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/VBoxContainer/LowerToolbar/AddTerrain" to="." method="_on_add_terrain_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/VBoxContainer/LowerToolbar/EditTerrain" to="." method="_on_edit_terrain_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/VBoxContainer/LowerToolbar/MoveUp" to="." method="_on_move_pressed" binds= [false]]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/VBoxContainer/LowerToolbar/MoveDown" to="." method="_on_move_pressed" binds= [true]]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/VBoxContainer/LowerToolbar/RemoveTerrain" to="." method="_on_remove_terrain_pressed"]
[connection signal="mouse_exited" from="VBoxContainer/HSplitContainer/Panel/ScrollArea/TileView" to="VBoxContainer/HSplitContainer/Panel/ScrollArea/TileView" method="clear_highlighted_tile"]
